--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.4.38",
     "prettier": "^2.5.1",
     "pusher-js": "^8.4.0-rc2",
+    "quasar-app-extension-qnumber": "^2.1.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.5.4",
     "vite-plugin-checker": "^0.6.4",
